--- a/src/styles/components/connect-wallet.sass
+++ b/src/styles/components/connect-wallet.sass
@@ -7,7 +7,7 @@
   @media (max-width: $tablet)
     grid-template-columns: 1fr
   &__wrapper
-    position: absolute
+    position: fixed
     top: 105vh
     left: 0
     width: 100vw
@@ -22,7 +22,7 @@
       border-radius: 24px 24px 0 0
       box-shadow: 0 -10px 10px 4px rgba($accent-dark, 50%)
     &--opened
-      top: 4px
+      top: 0
       left: 0
       opacity: 1
       touch-action: auto
